test/modules/shadowing/issue-19167-3-x.good
issue-19167-3-x.chpl:5: In module 'CUseA':
issue-19167-3-x.chpl:7: error: 'x' has multiple definitions
issue-19167-3-x.chpl:6: note: redefined through the 'use' of 'A' here
issue-19167-3-x.chpl:2: note: leading to the definition here
